# vostd

./: .env  .gitignore  .gitmodules  .rusty-hook.toml  AGENTS.md  COPYRIGHT  Cargo.toml  Makefile  README.md  dependency_extractor.py  dependency_extractor2.py  frame_lifecycle_state_machine.md  metaslot_explanation.md  notes  pyproject.toml  repr_ptr_design_explanation.md  rust-toolchain.toml  rustfmt.toml  subrepo.toml  verus.code-workspace
aster_common/: Cargo.toml
aster_common/src/: abstract_state.rs  error.rs  lib.rs  mm.rs  page_prop.rs  prelude.rs  vm_space.rs
aster_common/src/arch/: mod.rs
aster_common/src/arch/x86_64/: kspace.rs  mm.rs  mod.rs  page_table_entry.rs  page_table_flags.rs  paging_consts.rs
aster_common/src/cpu/: mod.rs
aster_common/src/cpu/set/: bit.rs  mod.rs  model.rs
aster_common/src/mm/: io.rs  mod.rs  page_prop.rs  vm_space.rs
aster_common/src/mm/frame/: frame_ref.rs  linked_list.rs  linked_list_owners.rs  meta.rs  meta_owners.rs  meta_region_owners.rs  mod.rs  segment.rs  unique.rs  untyped.rs
aster_common/src/mm/kspace/: mod.rs
aster_common/src/mm/page_table/: mod.rs  owners.rs  view.rs
aster_common/src/page/: dyn_page.rs  mod.rs  model.rs
aster_common/src/page/meta/: exp_models.rs  frame_list_model.rs  frame_meta.rs  linked_list.rs  mapping.rs  meta_region_model.rs  meta_slot.rs  meta_slot_model.rs  mod.rs  page_meta.rs  page_usage.rs
aster_common/src/page_table/: mod.rs  page_table.rs  page_table_entry_trait.rs  page_table_mode.rs  page_table_model.rs  paging_consts_trait.rs  path_model.rs  tree_model.rs
aster_common/src/page_table/cursor/: cursor.rs  cursor_mut.rs  mod.rs  model.rs
aster_common/src/page_table/node/: child.rs  entry.rs  mod.rs  page_table_node.rs  page_table_node_value.rs  raw_page_table_node.rs
aster_common/src/task/: atomic_mode.rs  mod.rs
aster_common/src/task/preempt/: guard.rs  mod.rs
aster_common/src/tlb/: align.rs  flush.rs  mod.rs  model.rs
aster_common/src/x86_64/: cpu.rs  kspace.rs  mm.rs  mod.rs  page_table_entry.rs  page_table_flags.rs  paging_consts.rs
code/sample/: Cargo.toml
code/sample/src/: lib.rs
demo/: Cargo.toml
demo/src/: lib.rs  ptr_extra.rs
dv/: .gitignore  Cargo.toml  README.md
dv/src/: commands.rs  config.rs  console.rs  dep_tree.rs  dummy_rustc.rs  executable.rs  files.rs  fingerprint.rs  generator.rs  lib.rs  main.rs  metadata.rs  new.rs  parser.rs  pre_commit.rs  projects.rs  serialization.rs  show.rs  toolchain.rs  verus.rs
dv/templates/: .dummy.rs.j2  Cargo.toml.j2  extern_crates.rs.j2  lib.rs.j2
dv/tests/: helper_tests.rs
fvt3-page-acquisition-safety/: Cargo.toml
fvt3-page-acquisition-safety/src/: common.rs  lib.rs  rust_core_mem.rs
fvt3-page-acquisition-safety/src/page/: mod.rs  model.rs  proofs.rs  specs.rs
fvt3-page-acquisition-safety/src/page/meta/: impls.rs  model.rs
fvt4-into-from-raw/: Cargo.toml
fvt4-into-from-raw/src/: abstract_state.rs  common.rs  lib.rs  rust_core_mem.rs
fvt4-into-from-raw/src/page/: mod.rs  model.rs  proofs.rs  specs.rs
fvt4-into-from-raw/src/page/meta/: impls.rs  mod.rs  model.rs  specs.rs
fvt5-lifecycle-safety/: Cargo.toml
fvt5-lifecycle-safety/src/: abstract_state.rs  common.rs  errors.rs  lib.rs  rust_core_mem.rs
fvt5-lifecycle-safety/src/frame/: mod.rs  model.rs  spec.rs
fvt5-lifecycle-safety/src/page/: mod.rs  model.rs  proofs.rs  specs.rs
fvt5-lifecycle-safety/src/page/meta/: impls.rs  mod.rs  (+2 more)
fvt5-lifecycle-safety/src/page_table/: mod.rs  model.rs
lock-protocol/: Cargo.toml
lock-protocol/src/: lib.rs  map_test.rs  map_test2.rs  test.rs
lock-protocol/src/exec/: mod.rs  test_map.rs  test_map2.rs
lock-protocol/src/helpers/: align_ext.rs  bits.rs  extern_const.rs  extra_num.rs  math.rs  mod.rs
lock-protocol/src/mm/: mod.rs  page_prop.rs  vm_space.rs
lock-protocol/src/spec/: atomic_spec.rs  common.rs  concrete_refines_range.rs  concrete_tree_spec.rs  lock_protocol.rs  mod.rs  page_table_model.rs  range_refines_atomic.rs  range_spec.rs  simple_page_table.rs  spt_helpers.rs  sub_page_table.rs  test.rs  tree.rs  tree_refines_atomic.rs  utils.rs  utils2.rs
lock-protocol/src/sync/: mod.rs  rcu.rs
lock-protocol/src/task/: mod.rs
lock-protocol/src/test/: map_test.rs  map_test2.rs  math_test.rs  mod.rs  struct_inner.rs  struct_test.rs  subrange.rs  terminate_test.rs  test.rs  tsm_test.rs
lock-protocol/src/x86_64/: kspace.rs  mm.rs  mod.rs
ostd-pod/: Cargo.toml
proofs/sample_ops/: Cargo.toml
proofs/sample_ops/sample_primitives/: Cargo.toml
proofs/sample_ops/src/: lib.rs
scripts/: Cargo.toml
scripts/shell/: rustfmt
scripts/src/: error.rs  git.rs  gits.rs  init.rs  lib.rs  manifest.rs  populate.rs
specs/ostd/: Cargo.toml
specs/ostd/src/: frame_specs.rs  lib.rs  linked_list_specs.rs  memory_region_specs.rs  meta_specs.rs  page_table_cursor_specs.rs  page_table_node_specs.rs
specs/sample/: Cargo.toml
specs/sample/src/: lib.rs
verified_libs/verified_bitflags/: Cargo.toml
verified_libs/verified_bitflags/src/: lib.rs
verified_libs/vstd_extra/: Cargo.toml
verified_libs/vstd_extra/src/: arithmetic.rs  array_ptr.rs  auxiliary.rs  bit_mapping.rs  cast_ptr.rs  drop_tracking.rs  function_properties.rs  ghost_tree.rs  lib.rs  map_extra.rs  ownership.rs  panic.rs  prelude.rs  seq_extra.rs  set_extra.rs  sub_ptr.rs  sum.rs  trans_macros.rs
vstd_extra/: Cargo.toml
vstd_extra/src/: arithmetic.rs  array_ptr.rs  auxiliary.rs  bit_mapping.rs  bits_extra.rs  cast_ptr.rs  drop_tracking.rs  extern_const.rs  extern_func.rs  extra_num.rs  function_properties.rs  ghost_tree.rs  lib.rs  manually_drop.rs  map_extra.rs  ownership.rs  panic.rs  prelude.rs  ptr_extra.rs  raw_ptr_extra.rs  seq_extra.rs  set_extra.rs  spec_operators.rs  std_extra.rs  sub_ptr.rs  sum.rs  token.rs  trans_macros.rs  undroppable.rs
vstd_extra/src/pcm/: agree.rs  csum.rs  excl.rs  mod.rs
vstd_extra/src/resource/: mod.rs  tokens.rs
vstd_extra/src/state_machine/: action.rs  mod.rs  state_machine.rs
vstd_extra/src/temporal_logic/: defs.rs  mod.rs  rules.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+846 files in other folders)
