[workspace]
resolver = "2"
members = [
    "ostd",
    "ostd/libs/ostd-macros",
    "ostd/libs/ostd-test",
    "kernel/libs/int-to-c-enum",
]
exclude = [
    "osdk",
]


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

[profile.release-lto]
inherits = "release"
lto = true
# lto can only be enabled when panic strategy is abort
panic = "abort"
# set codegen-units as the smallest number
codegen-units = 1