[workspace]
members = [
    "vstd_extra",
    "aster_common",
    "demo",
    "ostd",
#    "ostd/libs/ostd-macros",
#    "ostd/libs/ostd-test",
#    "kernel/libs/int-to-c-enum",
]
exclude = [
    "scripts",
    "dv",
    "tools/verus",
    "tools/verus-analyzer",
    "tests",
    "osdk",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
# Verus
vstd = { path = "tools/verus/source/vstd" }
