[package]
name = "demo"
version = "0.0.1"
edition = "2021"
description = "Example of Rust development"
license = "MPL-2.0"

[lib]
crate-type = ["rlib"]
name = "demo"
# for cargo
# path = "src/.dummy.rs"
path = "src/lib.rs"

[features]
verus = []
verify = ["verus"]
alloc = []
default = ["verify", "alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vstd = { path = "../tools/verus/source/vstd" }
builtin_macros = { path = "../tools/verus/source/builtin_macros" }
vstd_extra = { path = "../vstd_extra" }