[package]
name = "fvt3-page-acquisition-safety"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rustc = []

[dependencies]
vstd ={ path = "../tools/verus/source/vstd" }
num-derive = { version = "*", default-features = false }
num-traits = { version = "*", default-features = false }

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors"

[package.metadata.verus]
external_crates = ["num-derive", "num-traits"]
