[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_dv_scripts"
path = "src/lib.rs"

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "populate"
path = "src/populate.rs"

[dependencies]
serde = { version = "*" }
serde_toml = { version = "*" }
serde_derive = { version = "*" }
toml = { version = "*" }
glob = { version = "*" }
project-root = { version = "*" }
ignore = "*"
git2 = { version = "*" }

[dev-dependencies]
rusty-hook = "^0.11.2"
