[package]
name = "xtask"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-platform = "=0.1.8"
cargo_metadata = "=0.19.0"
clap = {version = "*", features = ["derive"]}
memoize = "*"
git2 = { version = "*" }
cargo_toml = { version = "*" }
lazy_static = { version = "*" }