[package]
name = "sample"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "sample"
# for cargo
path = "src/.dummy.rs"
# path = "src/lib.rs"

[features]
verus = []
verify = ["verus"]
alloc = []
default = ["verify", "alloc"]

[package.metadata.verus]
path = "src/lib.rs"
verify = true
check_lifetime = true

[dependencies]
vstd = { workspace = true, optional = true }
builtin = { workspace = true, optional = true }
builtin_macros = { workspace = true, optional = true }
