[package]
name = "sample_ops"
version = "0.1.0"
description = "Verification of Sample Operations code"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "sample_ops"
# for cargo
# path = "src/.dummy.rs"
path = "src/lib.rs"

[features]
verus = []
verify = ["verus"]
alloc = []
default = ["verify", "alloc"]

[package.metadata.verus]
path = "src/lib.rs"
verify = true
check_lifetime = true

[dependencies]
sample = { path = "../../code/sample" }
sample_specs = { path = "../../specs/sample" }
vstd = { path = "../../tools/verus/source/vstd" }
builtin = { path = "../../tools/verus/source/builtin" }
builtin_macros = { path = "../../tools/verus/source/builtin_macros" }
