[package]
name = "ostd_specs"
version = "0.1.0"
description = "Specifications for the Sample code"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "ostd_specs"
# for cargo
path = "src/.dummy.rs"
# path = "src/lib.rs"

[features]
verus = []
verify = ["verus"]
alloc = []
default = ["verify", "alloc"]

[package.metadata.verus]
path = "src/lib.rs"
verify = true
check_lifetime = true

[dependencies]
vstd = { path = "../../tools/verus/source/vstd" }
vstd_extra = { path = "../../vstd_extra" }
aster_common = { path = "../../aster_common" }
builtin = { path = "../../tools/verus/source/builtin" }
builtin_macros = { path = "../../tools/verus/source/builtin_macros" }
 