[package]
name = "sample_specs"
version = "0.1.0"
description = "Specifications for the Sample code"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "sample_specs"
# for cargo
path = "src/.dummy.rs"
# path = "src/lib.rs"

[features]
verus = []
verify = ["verus"]
alloc = []
default = ["verify", "alloc"]

[package.metadata.verus]
path = "src/lib.rs"
verify = true
check_lifetime = true

[dependencies]
sample = { path = "../../code/sample" }
vstd = { path = "../../tools/verus/source/vstd" }
builtin = { path = "../../tools/verus/source/builtin" }
builtin_macros = { path = "../../tools/verus/source/builtin_macros" }
